# Boid-Simulation

./: .gitignore  CMakeLists.txt  compile.bat  main.c  readme.md
.cache/clangd/index/: context.c.F940EACEBEF0464E.idx  egl_context.c.75AC97BE50FB0046.idx  egl_context.h.DE4B9407DE71880F.idx  glfw3.h.DE85ED93C7237E38.idx  glfw3native.h.AE5328EA5834CF59.idx  glfwFuncs.c.1F3AFB86B0689FA0.idx  glfwFuncs.c.B073DF68C891270C.idx  glfwFuncs.h.9689C0355A43415B.idx  glfwFuncs.h.F44252637BD36BC6.idx  graphicsPipeline.c.AE63DCCFAB4EC72C.idx  graphicsPipeline.h.BB0FBCF9F815E5F5.idx  imageViews.c.3FE93B0E2AC85C51.idx  imageViews.h.44F2A6162EAA13A9.idx  init.c.D6B1FA061C811CF7.idx  input.c.83FA6CA9902234D6.idx  internal.h.748A739392588DD2.idx  main.c.1E475193B6863618.idx  mappings.h.696C5461A1F23C1A.idx  monitor.c.DE95F3DCAC62BE74.idx  osmesa_context.c.AA04096E6E0F07E4.idx  osmesa_context.h.247D5FC41C5BA2AC.idx  swapchain.c.4B20DF9036EEFF65.idx  swapchain.h.DABD3DF7C23EC3BE.idx  vulkan.c.C3DF919195E63FC7.idx  vulkanDebug.c.E202030018A7B07E.idx  vulkanDebug.c.FD40B2C9BEDA2BFC.idx  vulkanDebug.h.5279800E0FEB97F6.idx  vulkanDebug.h.A1544B7564D562FE.idx  vulkanInit.c.5531E30254C655AD.idx  vulkanInit.c.EFA34B007AE5D4CC.idx  vulkanInit.h.A9C195FC16F21F17.idx  vulkanInit.h.C0B901FACB132A38.idx  wgl_context.c.347391BED35A3317.idx  wgl_context.h.63A44D380D19674F.idx  win32_init.c.2131B738DA416B8E.idx  win32_joystick.c.DB0F09B38E6BB3C8.idx  win32_joystick.h.3FB1200A37C019DE.idx  win32_monitor.c.125370064FCD51EB.idx  win32_platform.h.95C1712703E6D458.idx  win32_thread.c.B55AF07C7F1D2A14.idx  (+3 more)
src/: main.c
src/DebugTools/: vulkanDebug.c  vulkanDebug.h
src/Graphics/: graphicsPipeline.c  graphicsPipeline.h
src/Initalization/: imageViews.c  imageViews.h  swapchain.c  swapchain.h  vulkanInit.c  vulkanInit.h
src/glfw/: glfwFuncs.c  glfwFuncs.h
src/vulkan_src/: vulkanDebug.c  vulkanDebug.h  vulkanInit.c  vulkanInit.h
